# hexlet-git

lesson_tests/: capitalize.py  pyproject.toml
lesson_tests/tests/: test_capitalize.py
lesson_tests1/one/: capitalize.py
lesson_tests1/tests/: test_capitalize.py
